syntax = "proto3";
package poker;

option go_package = "./pb";

import "packet.proto";
import "database.proto";
import "report.proto";
import "global_enum.proto";
import "global_enum_cfg.proto";
import "table_cfg.proto";
import "player_data.proto";

// ======================德州扑克==================
// 加入房间请求
message TexasJoinRoomReq {
  uint64     room_id     = 1;  // 房间id
  MatchType  match_type  = 2;  // sng 类型
  PlayerInfo player_info = 3;  // (后台专用，客户端无用)玩家信息
}

message TexasRoomInfo {
  uint64 room_id          = 1;   // 唯一id
  int32  game_type        = 2;   // 游戏类型
  int32  room_stage       = 3;   // 房间等级
  int32  coin_type        = 4;   // 币种类型
  int32  room_state       = 5;   // 房间状态
  int64  create_time      = 6;   // 房间创建时间
  int64  finish_time      = 7;   // 房间结束时间
  int32  min_buy_in       = 8;   // 最小买入
  int32  max_buy_in       = 9;   // 最大买入
  int64  small_blind      = 10;  // 小盲注
  int64  big_blind        = 11;  // 大盲注
  int32  max_player_count = 12;  // 最大玩家数量
  int32  player_count     = 13;  // 当前玩家数量
}

message TexasJoinRoomRsp {
  RspHead                 head        = 1;
  TexasRoomInfo           room_info   = 2;
  TexasTableData          table_info  = 3;
  int64                   duration    = 4;
  map<uint64, PlayerInfo> player_info = 5;
}

// 退出房间请求
message TexasQuitRoomReq {
  uint64 room_id = 1;
}

message TexasQuitRoomRsp {
  RspHead  head      = 1;
  uint64   room_id   = 2;
  CoinType coin_type = 3;
  int64    chip      = 4;
}

// 坐下请求
message TexasSitDownReq {
  uint64 room_id     = 1;
  uint32 chair_id    = 2;
  uint32 buyin_chips = 3;
}

message TexasSitDownRsp {
  RspHead head     = 1;
  uint32  chair_id = 2;
  uint64  room_id  = 3;
}

// 站起请求
message TexasStandUpReq {
  uint64 room_id  = 1;
  uint32 chair_id = 2;
}

message TexasStandUpRsp {
  RspHead head     = 1;
  uint32  chair_id = 2;
  uint64  room_id  = 3;
}

// 买入请求
message TexasBuyInReq {
  uint64 room_id   = 1;  // 房间ID
  int64  chip      = 2;  // 增加筹码
  int32  coin_type = 3;  // 币种类型
}

message TexasBuyInRsp {
  RspHead head      = 1;
  uint64  room_id   = 2;
  int64   chip      = 4;
  int32   coin_type = 5;  // 币种类型
}

// 下注请求
message TexasDoBetReq {
  int64  chip         = 1;  // 0为 check看牌
  uint32 chair_id     = 2;
  uint64 room_id      = 3;
  int32  operate_type = 4;  // 操作类型 enum OperateType
}

message TexasDoBetRsp {
  RspHead head      = 1;
  uint32  round     = 2;
  uint32  chair_id  = 3;  // 操作者椅子 id
  int32   op_type   = 4;  // 操作类型 enum OperateType
  int64   chip      = 5;  // 下注金额
  int64   bank_roll = 6;  // 当前剩余金额
  int64   total_bet = 7;  // 此局游戏总下注
  uint64  room_id   = 8;
}

// 查询牌局记录
message TexasGameReportReq {
  uint64 room_id = 1;
  uint32 round   = 2;
}

message TexasGameReportRsp {
  RspHead         head = 1;
  TexasGameReport data = 2;
}

// ------------------通知消息=-----------------
message TexasEventNotify {
  TexasEventType Event   = 1;
  bytes          Content = 2;
}

// EVENT_FLOP_CARD, EVENT_DEAL, EVENT_FLOP_CARD, EVENT_FLOP_CARD
message TexasDealEventNotify {
  uint64           room_id          = 1;  // 房间id
  int32            game_state       = 2;  // 游戏状态
  repeated uint32  hands_card       = 3;  // 手牌 or 公共牌
  uint32           cur_bet_chair_id = 4;  // 当前下注玩家座位
  TexasPotPoolData pot_pool         = 5;  // 筹码池
  int64            duration         = 6;  // 时间戳
}

// EVENT_STAND_UP, EVENT_SIT_DOWN, EVENT_STAND_UP
message TexasPlayerEventNotify {
  uint64          room_id     = 1;  // 房间id
  uint32          chair_id    = 2;  // 下注玩家
  TexasPlayerData player      = 3;  // 玩家数据
  uint64          uid         = 4;  // 玩家uid
  PlayerInfo      player_info = 5;  // 玩家头像信息
}

// EVENT_GAME_END, EVENT_GAME_START
message TexasGameEventNotify {
  uint64                    room_id          = 1;  // 房间id
  uint32                    round            = 2;  // 当前回合
  uint32                    dealer_chair     = 3;  // 庄家座位号
  uint32                    small_chair      = 4;  // 小盲座位号
  uint32                    big_chair        = 5;  // 大盲座位号
  uint32                    small_chip       = 6;  // 小盲位筹码
  uint32                    big_chip         = 7;  // 大盲位筹码
  uint32                    cur_bet_chair_id = 8;  // 当前下注玩家座位
  TexasPotPoolData          pot_pool         = 9;  // 筹码池
  repeated TexasGameEndInfo end_info         = 10;
  int64                     duration         = 11;  // 时间戳
}

message TexasGameEndInfo {
  uint64          uid       = 1;
  uint32          chair_id  = 2;
  int64           chips     = 3;
  int64           win_chips = 4;
  int32           card_type = 5;  // 牌型
  repeated uint32 hands     = 6;
  repeated uint32 bests     = 7;  // 最大牌型
}

// EVENT_BET
message TexasBetEventNotify {
  uint64           room_id       = 1;   // 房间id
  uint32           chair_id      = 2;   // 下注玩家
  int64            chips         = 3;   // 玩家手里筹码
  uint32           next_chair_id = 4;   // 下一个下注玩家
  int32            operate_type  = 5;   // 玩家操作类型
  int64            bet_chips     = 6;   // 玩家下注金额,看牌&弃牌为0
  TexasPotPoolData pot_pool      = 7;   // 筹码池
  int64            min_raise     = 8;   // 最小加注
  int64            max_bet_chips = 9;   // 最大下注筹码
  int64            duration      = 10;  // 时间戳
}

// -----------------------sng赛事----------------------------------
message SngRoomListReq {
  MatchType match_type = 1;  // 比赛类型
  GameType  game_type  = 2;  // 游戏类型
  CoinType  coin_type  = 3;  // 币种类型
}

message SngRoomInfo {
  string              title            = 1;   // 比赛标题
  int32               match_type       = 2;   // 比赛类型
  int32               game_type        = 3;   // 游戏类型
  CoinReward          consume          = 4;   // 比赛消耗
  int64               entry_fee        = 5;   // 报名费
  int64               chip             = 6;   // 初始筹码
  int32               table_count      = 7;   // 桌子数量
  int32               min_player_count = 8;   // 最小玩家数量
  int32               player_count     = 9;   // 玩家数量
  repeated CoinReward first_rewards    = 10;  // 第一名奖励
  repeated CoinReward rewards          = 11;  // 排名奖励列表
  uint64              room_id          = 12;  // 房间ID
  int64               create_time      = 13;  // 创建时间
  int32               room_state       = 14;  // 房间状态
  int32               match_id         = 15;  // match配置id
}

message SngRoomListRsp {
  RspHead              head      = 1;
  repeated SngRoomInfo room_list = 2;  // 比赛房间列表
}

// 加入比赛请求
message SngJoinRoomReq {
  int32 match_id = 1;  // match配置id
}

message SngJoinRoomRsp {
  RspHead head    = 1;
  uint64  room_id = 2;  // 房间ID
  int64   chip    = 3;  // 玩家初始筹码
}
